Version 3.0.9, released February 6, 2017

Adds
- an option --toradocu-conditions to input Toradocu generated conditions derived
  from javadoc @param and @throws tags in class documentation. These conditions
  can override classification of generated tests by exception.

Fixes
- failure to instantiate capture conversion variables for wildcards with type
  variable as a bound. (#144)
- overly conservative test for recursive type bounds that was preventing
  capture conversion on wildcard types with complex bounds. (#143)
- broken assignability test on parameterized types with wildcard arguments.
- generation of uncompilable code due to an inaccessible type that was a type
  argument to a parameterized type occurring as the type of a formal parameter
  of a method. (#128)
- potential variable name clash when a type name ends in a digit. (#132)
- failure in certain situations where a generic method or constructor has a
  argument type that has a wildcard with a bound that includes the type
  parameter of the generic (e.g., Iterable<? extends T>).

Changes classpath error message to explain alternatives for why a class with
  a given classname is not found.



Version 3.0.8, released December 8, 2016

Fixes
- a failure when instantiating the generic containing type of a non-generic
  member class.
- generation of different tests between runs over the same classes
  where the classes were given in different order.
- generation of invalid calls to a static member of an inaccessible class when
  inherited by an accessible subclass.
- a failure when checking type instantiations against certain kinds of bounds
  on type variables.
- generation of uncompilable code when static final fields with same name are
  inherited by a class under test from more than one class or interface.
- a failure due to an assertion enforcing a property on type bounds that is
  valid for type parameters, but not for wildcard bounds.